Completed Foundations/Wikidata. Minor fixes in Taxonomy analysis.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -221,6 +221,14 @@ year = {2011}
  address = {New York, NY, USA},
  keywords = {machine learning, ontology mapping, relaxation labeling, semantic web},
 }
+% rule mining in knowledge bases, open world assumption
+@phdthesis{Galarraga2016,
+author = {Gal{\'{a}}rraga, Luis},
+school = {Telecom ParisTech},
+title = {{Rule Mining in Knowledge Bases}},
+year = {2016}
+}
+
 % hierarchy learning via word embeddings
 @article{Fu2014,
 abstract = {Semantic hierarchy construction aims to build structures of concepts linked by hypernym–hyponym (“is-a”) relations. A major challenge for this task is the automatic discovery of such relations. This paper proposes a novel and effec- tive method for the construction of se- mantic hierarchies based on word em- beddings, which can be used to mea- sure the semantic relationship between words. We identify whether a candidate word pair has hypernym–hyponym rela- tion by using the word-embedding-based semantic projections between words and their hypernyms. Our result, an F-score of 73.74{\%}, outperforms the state-of-the- art methods on a manually labeled test dataset. Moreover, combining our method with a previous manually-built hierarchy extension method can further improve F- score to 80.29{\%}. 1},
@@ -341,4 +349,10 @@ note={Accessed: 2017-01-29}
 title={Wikidata project chat: Top of the subclass tree},
 howpublished={\url{https://www.wikidata.org/w/index.php?title=Wikidata:Project_chat&oldid=91040961#Top_of_the_subclass_tree}},
 note={Accessed: 2017-01-30}
+}
+% wikidata new item
+@misc{WikidataNewItem,
+title={Wikidata: Create a new item},
+howpublished={\url{https://www.wikidata.org/wiki/Special:NewItem}},
+note={Accessed: 2017-02-05}
 }
