--- a/thesis/taxonomy_analysis.ltx
+++ b/thesis/taxonomy_analysis.ltx
@@ -74,8 +74,8 @@ The full set of unlinked classes is problematic for use in an algorithm as there
 over all classes.
 $\approx 16\%$ of classes are not labeled and $\approx 31.4\%$ of classes have no instances.
 Both labels and instances are useful characteristics for a class to have.
-The label allows the recognition of the class in natural text and also ensures that the class in the context of
-Wikidata was already curated, as the label is typically the first attribute, which is added by users \ref{WikidataLabeling}.
+The label allows the recognition of the class in natural text and ensures that the class fulfills a basic quality criteria,
+since the label is the first characteristic of a Wikidata item, which should be created by a user \cite{WikidataNewItem}.
 Instances represent classes and thereby describe them. For example, \fullcite{Rodriguez2003} use
 instances  to compute semantic similarity between classes.
 Therefore, I propose to only consider the set of classes, which have a label in the English language 
@@ -103,8 +103,8 @@ At the same time the average of subclasses per class halved to $\approx 0.4$
 and the assumption is not directly relevant to the thesis.}
 Combined with the 
 unchanged median of $1$ instance per class, supports the assumption, that classes are mainly
-created for the purpose of grouping instances. While the extension of the taxonomy by connecting
-the newly created class to the main component of the taxonomy is \textbf{vernachlaessigt}.
+created for the purpose of grouping instances.
+While adding the newly created class to the main taxonomy is being neglected.
 
 \begin{figure}
 \centering
