--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -35,7 +35,7 @@
 \pagenumbering{arabic}
 
 \section{Introduction}
-Motivation. Related work. Solution. Evaluation.
+\import{./}{introduction.ltx}
 
 \section{Foundations}
 \import{./}{foundations.ltx}
